--- a/_html/main.html
+++ b/_html/main.html
@@ -8,12 +8,367 @@
             
             <!-- build:section header -->
             <!-- /build -->
-
-            <!-- page -->
-            <div class="page">
-                2222
-            </div>
-            <!-- /page -->
+	
+			<!--main-top-box-->
+			<div class="main-top-box cnt-section">
+				<div class="inner-wrap">
+					<div class="info-inner-wrap">
+						<div class="title-wrap">
+							<h1 class="main-title title-gradient">Join the Fastest Growing Banking Crypto&nbsp;App.</h1>
+						</div>
+						<div class="actions-wrap">
+							<div class="action-button">
+								<a href="" class="btn-action-app">
+									<img src="./img/button-apple.svg" alt="">
+								</a>
+							</div>
+							<div class="action-button">
+								<a href="" class="btn-action-app">
+									<img src="./img/button-google.svg" alt="">
+								</a>
+							</div>
+							<div class="action-qr">
+								<div class="action-title">Scan to download App</div>
+								<div class="action-link">
+									<div class="btn-action-qr">
+										<img src="./img/button-qr.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="photo-inner-wrap">
+						<div class="elm-screen-main screen01">
+							<img src="./img/screen01.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-top-box-->
+	
+			<!--tiles-credits-box-->
+			<div class="tiles-credits-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap">
+						<h2 class="main-title">Credits crypto bank</h2>
+					</div>
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-credit">
+								<div class="tile-title-wrap">
+									<div class="tile-title h5-title">Banking</div>
+									<div class="tile-text text-body">Use Credits App like ordinary bank.</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/credit04.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-credit">
+								<div class="tile-title-wrap">
+									<div class="tile-title h5-title">Payments</div>
+									<div class="tile-text text-body">Send & Receive money from anybody.</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/credit01.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-credit">
+								<div class="tile-title-wrap">
+									<div class="tile-title h5-title">Transfers</div>
+									<div class="tile-text text-body">Top up IBAN account from crypto wallet.</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/credit02.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-credit">
+								<div class="tile-title-wrap">
+									<div class="tile-title h5-title">Crypto</div>
+									<div class="tile-text text-body">Buy, sell, store and&nbsp;exchange. </div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/credit03.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+					<div class="main-buttons-wrap">
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/tiles-credits-box-->
+	
+			<!--main-app-box-->
+			<div class="main-app-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h2 class="h1-title">
+							A new generation <br>
+							<span class="title-gradient gr03">Financial App</span>
+						</h2>
+						<p>Credits combines banking services with cryptocurrency in one App. We bridge banking with crypto.</p>
+					</div>
+					<div class="box-inner-wrap">
+						<div class="title-inner-wrap">
+							<h2 class="h4-title title-gradient gr10">Money on&nbsp;individual.</h2>
+						</div>
+						<div class="text-inner-wrap text-body-large">
+							<p>Money on individual accounts are&nbsp;secure by&nbsp;the&nbsp;government up&nbsp;100.000 Euro.</p>
+						</div>
+						<div class="photo-inner-wrap">
+							<div class="elm-screen-main screen02">
+								<img src="./img/screen02.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="main-buttons-wrap">
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-apple.svg" alt="">
+							</a>
+						</div>
+						<div class="button-wrap">
+							<a href="" class="btn-action-app">
+								<img src="./img/button-google.svg" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-app-box-->
+	
+			<!--main-info-box-->
+			<div class="main-info-box cnt-section">
+				<div class="inner-wrap">
+					<div class="box-inner-wrap">
+						<div class="photo-inner-wrap">
+							<div class="elm-screen-main screen02">
+								<img src="./img/screen03.png" alt="">
+							</div>
+						</div>
+						<div class="info-inner-wrap text-body">
+							<h2 class="h1-title">IBAN account for <span class="title-gradient">payments in EUR </span></h2>
+							<p>The individual IBAN account in EUR from Credits can&nbsp;be&nbsp;opened online without visiting a bank. </p>
+							<div class="main-actions-wrap">
+								<div class="button-wrap">
+									<a href="" class="btn">Open account</a>
+								</div>
+								<div class="action-wrap">
+									<a href="" class="btn-action-more">Learn more</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-info-box-->
+	
+			<!--tiles-info-box-->
+			<div class="tiles-info-box no-padding cnt-section">
+				<div class="inner-wrap">
+					<div class="items-wrap">
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-info tile-blue">
+								<div class="tile-title-wrap">
+									<div class="tile-title h3-title">Send EUR from your IBAN across&nbsp;Europe and&nbsp;worldwide.</div>
+									<div class="main-actions-wrap">
+										<div class="button-wrap">
+											<a href="" class="btn button-light">Open account</a>
+										</div>
+										<div class="action-wrap">
+											<a href="" class="btn-action-more button-light">Learn more</a>
+										</div>
+									</div>
+								</div>
+								<div class="tile-photo-wrap">
+									<div class="tile-photo">
+										<img src="./img/map.svg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+						<!--item wrap-->
+						<div class="item-wrap">
+							<div class="item-tile-info">
+								<div class="tile-title-wrap">
+									<div class="tile-subtitle text-body">Sell cryptocurrency</div>
+									<div class="tile-ico">
+										<img src="./img/icons/send.svg" alt="">
+									</div>
+									<div class="tile-title h3-title">Withdrawal money&nbsp;from Credits account instantly.</div>
+								</div>
+								<div class="tile-photos-wrap">
+									<div class="tile-photo photo-cover">
+										<img src="./img/logo01.png" alt="">
+									</div>
+									<div class="tile-photo photo-cover">
+										<img src="./img/logo02.png" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--/item wrap-->
+					</div>
+				</div>
+			</div>
+			<!--/tiles-info-box-->
+			
+			<!--main-info-box-->
+			<div class="main-info-box cnt-section">
+				<div class="inner-wrap">
+					<div class="box-inner-wrap box-reverse">
+						<div class="photo-inner-wrap">
+							<div class="elm-screen-main screen-full">
+								<img src="./img/screen04.png" alt="">
+							</div>
+						</div>
+						<div class="info-inner-wrap text-body">
+							<h2 class="h1-title">Buy USDT with <span class="title-gradient gr06">zero&nbsp;fee</span></h2>
+							<p>Download Credits App and Buy the most popular Stabile USD token with Zero&nbsp;fee.  </p>
+							<div class="main-buttons-wrap">
+								<div class="button-wrap">
+									<a href="" class="btn-action-app">
+										<img src="./img/button-apple.svg" alt="">
+									</a>
+								</div>
+								<div class="button-wrap">
+									<a href="" class="btn-action-app">
+										<img src="./img/button-google.svg" alt="">
+									</a>
+								</div>
+								<div class="action-wrap">
+									<a href="" class="btn-action-more button-att">Learn more</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-info-box-->
+	
+			<!--main-card-box-->
+			<div class="main-card-box cnt-section no-pbottom">
+				<div class="inner-wrap">
+					<div class="box-outer-wrap text-body">
+						<div class="main-title-wrap">
+							<h2 class="h2-title">Credits Card</h2>
+							<p>Comming in Q1 2023. </p>
+						</div>
+						<div class="box-inner-wrap">
+							<div class="photo-inner-wrap">
+								<div class="elm-screen-main screen-card">
+									<img src="./img/card.png" alt="">
+								</div>
+							</div>
+							<div class="info-inner-wrap">
+								<p>Euro or GBP debit card. <br>First plan is free card & account. <br>Virtual card and physical one.</p>
+								<div class="main-actions-wrap">
+									<div class="button-wrap">
+										<a href="" class="btn">Open account</a>
+									</div>
+									<div class="action-wrap">
+										<a href="" class="btn-action-more">Learn more</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-card-box-->
+	
+			<!--main-icons-box-->
+			<div class="main-icons-box cnt-section">
+				<div class="inner-wrap">
+					<div class="main-title-wrap text-body">
+						<h3 class="h3-title">Be with us!</h3>
+						<p>New products and services with updates every month.</p>
+					</div>
+					<div class="items-inner-wrap text-body-main">
+						<div class="items-wrap">
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-icon">
+									<div class="tile-ico">
+										<img src="./img/icons/01.svg" alt="">
+									</div>
+									<div class="tile-title h6-title">License</div>
+									<div class="tile-text">Europien licensed service for banking and crypto.</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-icon">
+									<div class="tile-ico">
+										<img src="./img/icons/02.svg" alt="">
+									</div>
+									<div class="tile-title h6-title">Compliance</div>
+									<div class="tile-text">Full compliance and requirements.</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-icon">
+									<div class="tile-ico">
+										<img src="./img/icons/03.svg" alt="">
+									</div>
+									<div class="tile-title h6-title">Security</div>
+									<div class="tile-text">High level of security via transactional monitoring.</div>
+								</div>
+							</div>
+							<!--/item wrap-->
+							<!--item wrap-->
+							<div class="item-wrap">
+								<div class="item-tile-icon">
+									<div class="tile-ico">
+										<img src="./img/icons/04.svg" alt="">
+									</div>
+									<div class="tile-title h6-title">Simplicity</div>
+									<div class="tile-text">Making crypto and fiat as&nbsp;simple as possible. </div>
+								</div>
+							</div>
+							<!--/item wrap-->
+						</div>
+					</div>
+				</div>
+			</div>
+			<!--/main-icons-box-->
             
             <!-- build:section footer -->
             <!-- /build -->
